// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render reset password button when disablePasswordReset is true 1`] = `
<SimpleLoginPage
  authenticationProviders={[]}
  disablePasswordReset={true}
  providerRequestPasswordResetPath="password-path"
  providerSessionsPath="sessions-path"
  session={
    {
      "username": "",
    }
  }
  show3scaleLoginForm={true}
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    forgotCredentials={false}
    loginTitle="Log in to your account"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Log in to your account"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-3"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Log in to your account
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                <Login3scaleForm
                  providerSessionsPath="sessions-path"
                  session={
                    {
                      "username": "",
                    }
                  }
                >
                  <Form
                    acceptCharset="UTF-8"
                    action="sessions-path"
                    autoComplete="off"
                    id="new_session"
                    method="post"
                    noValidate={true}
                  >
                    <FormBase
                      acceptCharset="UTF-8"
                      action="sessions-path"
                      autoComplete="off"
                      id="new_session"
                      innerRef={null}
                      method="post"
                      noValidate={true}
                    >
                      <form
                        acceptCharset="UTF-8"
                        action="sessions-path"
                        autoComplete="off"
                        className="pf-c-form"
                        id="new_session"
                        method="post"
                        noValidate={true}
                      >
                        <HiddenInputs>
                          <input
                            name="utf8"
                            type="hidden"
                            value="✓"
                          />
                          <CSRFToken>
                            <input
                              name="mocked-csrf-param"
                              type="hidden"
                              value="mocked-csrf-token"
                            />
                          </CSRFToken>
                        </HiddenInputs>
                        <TextField
                          inputProps={
                            {
                              "autoFocus": true,
                              "fieldId": "session_username",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Email or Username",
                              "name": "username",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Email or username is mandatory"
                            inputProps={
                              {
                                "autoFocus": true,
                                "fieldId": "session_username",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Email or Username",
                                "name": "username",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="text"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_username"
                              helperTextInvalid="Email or username is mandatory"
                              isRequired={true}
                              label="Email or Username"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_username"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Email or Username
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={true}
                                      id="session_username"
                                      isRequired={true}
                                      name="username"
                                      onChange={[Function]}
                                      type="text"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={true}
                                        className=""
                                        id="session_username"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="username"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="text"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={true}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-5"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_username"
                                          name="username"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="text"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </TextField>
                        <PasswordField
                          inputProps={
                            {
                              "autoFocus": false,
                              "fieldId": "session_password",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Password",
                              "name": "password",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Password is mandatory"
                            inputProps={
                              {
                                "autoFocus": false,
                                "fieldId": "session_password",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Password",
                                "name": "password",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="password"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_password"
                              helperTextInvalid="Password is mandatory"
                              isRequired={true}
                              label="Password"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_password"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Password
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={false}
                                      id="session_password"
                                      isRequired={true}
                                      name="password"
                                      onChange={[Function]}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={false}
                                        className=""
                                        id="session_password"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="password"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="password"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={false}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-6"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_password"
                                          name="password"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="password"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </PasswordField>
                        <ActionGroup>
                          <div
                            className="pf-c-form__group pf-m-action"
                          >
                            <div
                              className="pf-c-form__group-control"
                            >
                              <div
                                className="pf-c-form__actions"
                              >
                                <Button
                                  className="pf-c-button pf-m-primary pf-m-block"
                                  isDisabled={true}
                                  type="submit"
                                >
                                  <ButtonBase
                                    className="pf-c-button pf-m-primary pf-m-block"
                                    innerRef={null}
                                    isDisabled={true}
                                    type="submit"
                                  >
                                    <button
                                      aria-disabled={true}
                                      aria-label={null}
                                      className="pf-c-button pf-m-primary pf-m-disabled pf-c-button pf-m-primary pf-m-block"
                                      data-ouia-component-id="OUIA-Generated-Button-primary-3"
                                      data-ouia-component-type="PF4/Button"
                                      data-ouia-safe={true}
                                      disabled={true}
                                      role={null}
                                      tabIndex={null}
                                      type="submit"
                                    >
                                       Sign in
                                    </button>
                                  </ButtonBase>
                                </Button>
                              </div>
                            </div>
                          </div>
                        </ActionGroup>
                      </form>
                    </FormBase>
                  </Form>
                </Login3scaleForm>
                <div
                  className="providers-separator"
                >
                  <AuthenticationProviders
                    authenticationProviders={[]}
                  >
                    <div
                      className="providers-list"
                    />
                  </AuthenticationProviders>
                </div>
              </div>
            </LoginMainBody>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</SimpleLoginPage>
`;

exports[`should render Login form and Authentication providers when available 1`] = `
<SimpleLoginPage
  authenticationProviders={
    [
      {
        "authorizeURL": "url-1",
        "humanKind": "Human 1",
      },
      {
        "authorizeURL": "url-2",
        "humanKind": "Human 2",
      },
    ]
  }
  disablePasswordReset={false}
  providerRequestPasswordResetPath="password-path"
  providerSessionsPath="sessions-path"
  session={
    {
      "username": "",
    }
  }
  show3scaleLoginForm={true}
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    forgotCredentials={
      <ForgotCredentials
        requestPasswordResetPath="password-path"
      />
    }
    loginTitle="Log in to your account"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Log in to your account"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-4"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Log in to your account
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                <Login3scaleForm
                  providerSessionsPath="sessions-path"
                  session={
                    {
                      "username": "",
                    }
                  }
                >
                  <Form
                    acceptCharset="UTF-8"
                    action="sessions-path"
                    autoComplete="off"
                    id="new_session"
                    method="post"
                    noValidate={true}
                  >
                    <FormBase
                      acceptCharset="UTF-8"
                      action="sessions-path"
                      autoComplete="off"
                      id="new_session"
                      innerRef={null}
                      method="post"
                      noValidate={true}
                    >
                      <form
                        acceptCharset="UTF-8"
                        action="sessions-path"
                        autoComplete="off"
                        className="pf-c-form"
                        id="new_session"
                        method="post"
                        noValidate={true}
                      >
                        <HiddenInputs>
                          <input
                            name="utf8"
                            type="hidden"
                            value="✓"
                          />
                          <CSRFToken>
                            <input
                              name="mocked-csrf-param"
                              type="hidden"
                              value="mocked-csrf-token"
                            />
                          </CSRFToken>
                        </HiddenInputs>
                        <TextField
                          inputProps={
                            {
                              "autoFocus": true,
                              "fieldId": "session_username",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Email or Username",
                              "name": "username",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Email or username is mandatory"
                            inputProps={
                              {
                                "autoFocus": true,
                                "fieldId": "session_username",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Email or Username",
                                "name": "username",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="text"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_username"
                              helperTextInvalid="Email or username is mandatory"
                              isRequired={true}
                              label="Email or Username"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_username"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Email or Username
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={true}
                                      id="session_username"
                                      isRequired={true}
                                      name="username"
                                      onChange={[Function]}
                                      type="text"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={true}
                                        className=""
                                        id="session_username"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="username"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="text"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={true}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-7"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_username"
                                          name="username"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="text"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </TextField>
                        <PasswordField
                          inputProps={
                            {
                              "autoFocus": false,
                              "fieldId": "session_password",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Password",
                              "name": "password",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Password is mandatory"
                            inputProps={
                              {
                                "autoFocus": false,
                                "fieldId": "session_password",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Password",
                                "name": "password",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="password"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_password"
                              helperTextInvalid="Password is mandatory"
                              isRequired={true}
                              label="Password"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_password"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Password
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={false}
                                      id="session_password"
                                      isRequired={true}
                                      name="password"
                                      onChange={[Function]}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={false}
                                        className=""
                                        id="session_password"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="password"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="password"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={false}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-8"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_password"
                                          name="password"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="password"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </PasswordField>
                        <ActionGroup>
                          <div
                            className="pf-c-form__group pf-m-action"
                          >
                            <div
                              className="pf-c-form__group-control"
                            >
                              <div
                                className="pf-c-form__actions"
                              >
                                <Button
                                  className="pf-c-button pf-m-primary pf-m-block"
                                  isDisabled={true}
                                  type="submit"
                                >
                                  <ButtonBase
                                    className="pf-c-button pf-m-primary pf-m-block"
                                    innerRef={null}
                                    isDisabled={true}
                                    type="submit"
                                  >
                                    <button
                                      aria-disabled={true}
                                      aria-label={null}
                                      className="pf-c-button pf-m-primary pf-m-disabled pf-c-button pf-m-primary pf-m-block"
                                      data-ouia-component-id="OUIA-Generated-Button-primary-4"
                                      data-ouia-component-type="PF4/Button"
                                      data-ouia-safe={true}
                                      disabled={true}
                                      role={null}
                                      tabIndex={null}
                                      type="submit"
                                    >
                                       Sign in
                                    </button>
                                  </ButtonBase>
                                </Button>
                              </div>
                            </div>
                          </div>
                        </ActionGroup>
                      </form>
                    </FormBase>
                  </Form>
                </Login3scaleForm>
                <div
                  className="providers-separator"
                >
                  <AuthenticationProviders
                    authenticationProviders={
                      [
                        {
                          "authorizeURL": "url-1",
                          "humanKind": "Human 1",
                        },
                        {
                          "authorizeURL": "url-2",
                          "humanKind": "Human 2",
                        },
                      ]
                    }
                  >
                    <div
                      className="providers-list"
                    >
                      <Provider
                        authorizeURL="url-1"
                        humanKind="Human 1"
                        key="Human 1"
                      >
                        <p
                          className="login-provider"
                        >
                          <a
                            className="login-provider-link"
                            href="url-1"
                          >
                            <KeyIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M802,320 C748.980664,320 706,277.019336 706,224 C706,170.980664 748.980664,128 802,128 C855.019336,128 898,170.980664 898,224 C898,277.019336 855.019336,320 802,320 M704,0 C527.3,0 384,143.3 384,320 C383.937788,357.490503 390.505571,394.696657 403.4,429.9 L0,824.1 L0,1024 L192,1024 L192,896 L320,896 L320,768 L448,768 L597,622 C596.906403,621.881923 596.838304,621.745723 596.8,621.6 C631.220126,633.811107 667.47802,640.034477 704,640 C880.7,640 1024,496.7 1024,320 C1024,143.3 880.7,0 704,0"
                                />
                              </svg>
                            </KeyIcon>
                             Authenticate through 
                            <LessThanIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 384 512"
                                width="1em"
                              >
                                <path
                                  d="M365.46 357.74L147.04 255.89l218.47-101.88c16.02-7.47 22.95-26.51 15.48-42.53l-13.52-29C360 66.46 340.96 59.53 324.94 67L18.48 209.91a32.014 32.014 0 0 0-18.48 29v34.24c0 12.44 7.21 23.75 18.48 29l306.31 142.83c16.06 7.49 35.15.54 42.64-15.52l13.56-29.08c7.49-16.06.54-35.15-15.53-42.64z"
                                />
                              </svg>
                            </LessThanIcon>
                            <GreaterThanIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 384 512"
                                width="1em"
                              >
                                <path
                                  d="M365.52 209.85L59.22 67.01c-16.06-7.49-35.15-.54-42.64 15.52L3.01 111.61c-7.49 16.06-.54 35.15 15.52 42.64L236.96 256.1 18.49 357.99C2.47 365.46-4.46 384.5 3.01 400.52l13.52 29C24 445.54 43.04 452.47 59.06 445l306.47-142.91a32.003 32.003 0 0 0 18.48-29v-34.23c-.01-12.45-7.21-23.76-18.49-29.01z"
                                />
                              </svg>
                            </GreaterThanIcon>
                            Human 1
                          </a>
                        </p>
                      </Provider>
                      <Provider
                        authorizeURL="url-2"
                        humanKind="Human 2"
                        key="Human 2"
                      >
                        <p
                          className="login-provider"
                        >
                          <a
                            className="login-provider-link"
                            href="url-2"
                          >
                            <KeyIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 1024 1024"
                                width="1em"
                              >
                                <path
                                  d="M802,320 C748.980664,320 706,277.019336 706,224 C706,170.980664 748.980664,128 802,128 C855.019336,128 898,170.980664 898,224 C898,277.019336 855.019336,320 802,320 M704,0 C527.3,0 384,143.3 384,320 C383.937788,357.490503 390.505571,394.696657 403.4,429.9 L0,824.1 L0,1024 L192,1024 L192,896 L320,896 L320,768 L448,768 L597,622 C596.906403,621.881923 596.838304,621.745723 596.8,621.6 C631.220126,633.811107 667.47802,640.034477 704,640 C880.7,640 1024,496.7 1024,320 C1024,143.3 880.7,0 704,0"
                                />
                              </svg>
                            </KeyIcon>
                             Authenticate through 
                            <LessThanIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 384 512"
                                width="1em"
                              >
                                <path
                                  d="M365.46 357.74L147.04 255.89l218.47-101.88c16.02-7.47 22.95-26.51 15.48-42.53l-13.52-29C360 66.46 340.96 59.53 324.94 67L18.48 209.91a32.014 32.014 0 0 0-18.48 29v34.24c0 12.44 7.21 23.75 18.48 29l306.31 142.83c16.06 7.49 35.15.54 42.64-15.52l13.56-29.08c7.49-16.06.54-35.15-15.53-42.64z"
                                />
                              </svg>
                            </LessThanIcon>
                            <GreaterThanIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 384 512"
                                width="1em"
                              >
                                <path
                                  d="M365.52 209.85L59.22 67.01c-16.06-7.49-35.15-.54-42.64 15.52L3.01 111.61c-7.49 16.06-.54 35.15 15.52 42.64L236.96 256.1 18.49 357.99C2.47 365.46-4.46 384.5 3.01 400.52l13.52 29C24 445.54 43.04 452.47 59.06 445l306.47-142.91a32.003 32.003 0 0 0 18.48-29v-34.23c-.01-12.45-7.21-23.76-18.49-29.01z"
                                />
                              </svg>
                            </GreaterThanIcon>
                            Human 2
                          </a>
                        </p>
                      </Provider>
                    </div>
                  </AuthenticationProviders>
                </div>
              </div>
            </LoginMainBody>
            <LoginMainFooter
              forgotCredentials={
                <ForgotCredentials
                  requestPasswordResetPath="password-path"
                />
              }
              signUpForAccountMessage={null}
              socialMediaLoginContent={null}
            >
              <div
                className="pf-c-login__main-footer"
              >
                <div
                  className="pf-c-login__main-footer-band"
                >
                  <ForgotCredentials
                    requestPasswordResetPath="password-path"
                  >
                    <LoginMainFooterBandItem>
                      <p
                        className="pf-c-login__main-footer-band-item"
                      >
                        <a
                          href="password-path"
                        >
                          Forgot password?
                        </a>
                      </p>
                    </LoginMainFooterBandItem>
                  </ForgotCredentials>
                </div>
              </div>
            </LoginMainFooter>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</SimpleLoginPage>
`;

exports[`should render itself 1`] = `
<SimpleLoginPage
  authenticationProviders={[]}
  disablePasswordReset={false}
  providerRequestPasswordResetPath="password-path"
  providerSessionsPath="sessions-path"
  session={
    {
      "username": "",
    }
  }
  show3scaleLoginForm={true}
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    forgotCredentials={
      <ForgotCredentials
        requestPasswordResetPath="password-path"
      />
    }
    loginTitle="Log in to your account"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Log in to your account"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-1"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Log in to your account
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                <Login3scaleForm
                  providerSessionsPath="sessions-path"
                  session={
                    {
                      "username": "",
                    }
                  }
                >
                  <Form
                    acceptCharset="UTF-8"
                    action="sessions-path"
                    autoComplete="off"
                    id="new_session"
                    method="post"
                    noValidate={true}
                  >
                    <FormBase
                      acceptCharset="UTF-8"
                      action="sessions-path"
                      autoComplete="off"
                      id="new_session"
                      innerRef={null}
                      method="post"
                      noValidate={true}
                    >
                      <form
                        acceptCharset="UTF-8"
                        action="sessions-path"
                        autoComplete="off"
                        className="pf-c-form"
                        id="new_session"
                        method="post"
                        noValidate={true}
                      >
                        <HiddenInputs>
                          <input
                            name="utf8"
                            type="hidden"
                            value="✓"
                          />
                          <CSRFToken>
                            <input
                              name="mocked-csrf-param"
                              type="hidden"
                              value="mocked-csrf-token"
                            />
                          </CSRFToken>
                        </HiddenInputs>
                        <TextField
                          inputProps={
                            {
                              "autoFocus": true,
                              "fieldId": "session_username",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Email or Username",
                              "name": "username",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Email or username is mandatory"
                            inputProps={
                              {
                                "autoFocus": true,
                                "fieldId": "session_username",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Email or Username",
                                "name": "username",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="text"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_username"
                              helperTextInvalid="Email or username is mandatory"
                              isRequired={true}
                              label="Email or Username"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_username"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Email or Username
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={true}
                                      id="session_username"
                                      isRequired={true}
                                      name="username"
                                      onChange={[Function]}
                                      type="text"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={true}
                                        className=""
                                        id="session_username"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="username"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="text"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={true}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_username"
                                          name="username"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="text"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </TextField>
                        <PasswordField
                          inputProps={
                            {
                              "autoFocus": false,
                              "fieldId": "session_password",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Password",
                              "name": "password",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Password is mandatory"
                            inputProps={
                              {
                                "autoFocus": false,
                                "fieldId": "session_password",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Password",
                                "name": "password",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="password"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_password"
                              helperTextInvalid="Password is mandatory"
                              isRequired={true}
                              label="Password"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_password"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Password
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={false}
                                      id="session_password"
                                      isRequired={true}
                                      name="password"
                                      onChange={[Function]}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={false}
                                        className=""
                                        id="session_password"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="password"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="password"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={false}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_password"
                                          name="password"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="password"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </PasswordField>
                        <ActionGroup>
                          <div
                            className="pf-c-form__group pf-m-action"
                          >
                            <div
                              className="pf-c-form__group-control"
                            >
                              <div
                                className="pf-c-form__actions"
                              >
                                <Button
                                  className="pf-c-button pf-m-primary pf-m-block"
                                  isDisabled={true}
                                  type="submit"
                                >
                                  <ButtonBase
                                    className="pf-c-button pf-m-primary pf-m-block"
                                    innerRef={null}
                                    isDisabled={true}
                                    type="submit"
                                  >
                                    <button
                                      aria-disabled={true}
                                      aria-label={null}
                                      className="pf-c-button pf-m-primary pf-m-disabled pf-c-button pf-m-primary pf-m-block"
                                      data-ouia-component-id="OUIA-Generated-Button-primary-1"
                                      data-ouia-component-type="PF4/Button"
                                      data-ouia-safe={true}
                                      disabled={true}
                                      role={null}
                                      tabIndex={null}
                                      type="submit"
                                    >
                                       Sign in
                                    </button>
                                  </ButtonBase>
                                </Button>
                              </div>
                            </div>
                          </div>
                        </ActionGroup>
                      </form>
                    </FormBase>
                  </Form>
                </Login3scaleForm>
                <div
                  className="providers-separator"
                >
                  <AuthenticationProviders
                    authenticationProviders={[]}
                  >
                    <div
                      className="providers-list"
                    />
                  </AuthenticationProviders>
                </div>
              </div>
            </LoginMainBody>
            <LoginMainFooter
              forgotCredentials={
                <ForgotCredentials
                  requestPasswordResetPath="password-path"
                />
              }
              signUpForAccountMessage={null}
              socialMediaLoginContent={null}
            >
              <div
                className="pf-c-login__main-footer"
              >
                <div
                  className="pf-c-login__main-footer-band"
                >
                  <ForgotCredentials
                    requestPasswordResetPath="password-path"
                  >
                    <LoginMainFooterBandItem>
                      <p
                        className="pf-c-login__main-footer-band-item"
                      >
                        <a
                          href="password-path"
                        >
                          Forgot password?
                        </a>
                      </p>
                    </LoginMainFooterBandItem>
                  </ForgotCredentials>
                </div>
              </div>
            </LoginMainFooter>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</SimpleLoginPage>
`;

exports[`should render reset password button when disablePasswordReset is false 1`] = `
<SimpleLoginPage
  authenticationProviders={[]}
  disablePasswordReset={false}
  providerRequestPasswordResetPath="password-path"
  providerSessionsPath="sessions-path"
  session={
    {
      "username": "",
    }
  }
  show3scaleLoginForm={true}
>
  <LoginPage
    backgroundImgAlt="Red Hat 3scale API Management"
    backgroundImgSrc=""
    brandImgAlt="Red Hat 3scale API Management"
    brandImgSrc=""
    forgotCredentials={
      <ForgotCredentials
        requestPasswordResetPath="password-path"
      />
    }
    loginTitle="Log in to your account"
  >
    <Login
      className=""
      footer={
        <LoginFooter>
          <p>
            
          </p>
          <List />
        </LoginFooter>
      }
      header={
        <LoginHeader
          headerBrand={
            <React.Fragment>
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              />
            </React.Fragment>
          }
        />
      }
    >
      <div
        className="pf-c-login"
      >
        <div
          className="pf-c-login__container"
        >
          <LoginHeader
            headerBrand={
              <React.Fragment>
                <Brand
                  alt="Red Hat 3scale API Management"
                  src=""
                />
              </React.Fragment>
            }
          >
            <header
              className="pf-c-login__header"
            >
              <Brand
                alt="Red Hat 3scale API Management"
                src=""
              >
                <img
                  alt="Red Hat 3scale API Management"
                  className="pf-c-brand"
                  src=""
                />
              </Brand>
            </header>
          </LoginHeader>
          <main
            className="pf-c-login__main"
          >
            <LoginMainHeader
              title="Log in to your account"
            >
              <header
                className="pf-c-login__main-header"
              >
                <Title
                  headingLevel="h2"
                  size="3xl"
                >
                  <h2
                    className="pf-c-title pf-m-3xl"
                    data-ouia-component-id="OUIA-Generated-Title-2"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Log in to your account
                  </h2>
                </Title>
              </header>
            </LoginMainHeader>
            <LoginMainBody>
              <div
                className="pf-c-login__main-body"
              >
                <Login3scaleForm
                  providerSessionsPath="sessions-path"
                  session={
                    {
                      "username": "",
                    }
                  }
                >
                  <Form
                    acceptCharset="UTF-8"
                    action="sessions-path"
                    autoComplete="off"
                    id="new_session"
                    method="post"
                    noValidate={true}
                  >
                    <FormBase
                      acceptCharset="UTF-8"
                      action="sessions-path"
                      autoComplete="off"
                      id="new_session"
                      innerRef={null}
                      method="post"
                      noValidate={true}
                    >
                      <form
                        acceptCharset="UTF-8"
                        action="sessions-path"
                        autoComplete="off"
                        className="pf-c-form"
                        id="new_session"
                        method="post"
                        noValidate={true}
                      >
                        <HiddenInputs>
                          <input
                            name="utf8"
                            type="hidden"
                            value="✓"
                          />
                          <CSRFToken>
                            <input
                              name="mocked-csrf-param"
                              type="hidden"
                              value="mocked-csrf-token"
                            />
                          </CSRFToken>
                        </HiddenInputs>
                        <TextField
                          inputProps={
                            {
                              "autoFocus": true,
                              "fieldId": "session_username",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Email or Username",
                              "name": "username",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Email or username is mandatory"
                            inputProps={
                              {
                                "autoFocus": true,
                                "fieldId": "session_username",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Email or Username",
                                "name": "username",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="text"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_username"
                              helperTextInvalid="Email or username is mandatory"
                              isRequired={true}
                              label="Email or Username"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_username"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Email or Username
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={true}
                                      id="session_username"
                                      isRequired={true}
                                      name="username"
                                      onChange={[Function]}
                                      type="text"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={true}
                                        className=""
                                        id="session_username"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="username"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="text"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={true}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_username"
                                          name="username"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="text"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </TextField>
                        <PasswordField
                          inputProps={
                            {
                              "autoFocus": false,
                              "fieldId": "session_password",
                              "isRequired": true,
                              "isValid": undefined,
                              "label": "Password",
                              "name": "password",
                              "onChange": [Function],
                              "value": "",
                            }
                          }
                        >
                          <FormGroup
                            helperTextInvalid="Password is mandatory"
                            inputProps={
                              {
                                "autoFocus": false,
                                "fieldId": "session_password",
                                "isRequired": true,
                                "isValid": undefined,
                                "label": "Password",
                                "name": "password",
                                "onChange": [Function],
                                "value": "",
                              }
                            }
                            type="password"
                          >
                            <FormGroup
                              autoComplete="off"
                              fieldId="session_password"
                              helperTextInvalid="Password is mandatory"
                              isRequired={true}
                              label="Password"
                              validated="default"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  autoComplete="off"
                                  className="pf-c-form__group"
                                >
                                  <div
                                    className="pf-c-form__group-label"
                                  >
                                    <label
                                      className="pf-c-form__label"
                                      htmlFor="session_password"
                                    >
                                      <span
                                        className="pf-c-form__label-text"
                                      >
                                        Password
                                      </span>
                                      <span
                                        aria-hidden="true"
                                        className="pf-c-form__label-required"
                                      >
                                         
                                        *
                                      </span>
                                    </label>
                                     
                                  </div>
                                  <div
                                    className="pf-c-form__group-control"
                                  >
                                    <TextInput
                                      autoComplete="off"
                                      autoFocus={false}
                                      id="session_password"
                                      isRequired={true}
                                      name="password"
                                      onChange={[Function]}
                                      type="password"
                                      validated="default"
                                      value=""
                                    >
                                      <TextInputBase
                                        aria-label={null}
                                        autoComplete="off"
                                        autoFocus={false}
                                        className=""
                                        id="session_password"
                                        innerRef={null}
                                        isDisabled={false}
                                        isIconSprite={false}
                                        isLeftTruncated={false}
                                        isReadOnly={false}
                                        isRequired={true}
                                        name="password"
                                        onChange={[Function]}
                                        ouiaSafe={true}
                                        type="password"
                                        validated="default"
                                        value=""
                                      >
                                        <input
                                          aria-invalid={false}
                                          aria-label={null}
                                          autoComplete="off"
                                          autoFocus={false}
                                          className="pf-c-form-control"
                                          data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                                          data-ouia-component-type="PF4/TextInput"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="session_password"
                                          name="password"
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          required={true}
                                          type="password"
                                          value=""
                                        />
                                      </TextInputBase>
                                    </TextInput>
                                  </div>
                                </div>
                              </GenerateId>
                            </FormGroup>
                          </FormGroup>
                        </PasswordField>
                        <ActionGroup>
                          <div
                            className="pf-c-form__group pf-m-action"
                          >
                            <div
                              className="pf-c-form__group-control"
                            >
                              <div
                                className="pf-c-form__actions"
                              >
                                <Button
                                  className="pf-c-button pf-m-primary pf-m-block"
                                  isDisabled={true}
                                  type="submit"
                                >
                                  <ButtonBase
                                    className="pf-c-button pf-m-primary pf-m-block"
                                    innerRef={null}
                                    isDisabled={true}
                                    type="submit"
                                  >
                                    <button
                                      aria-disabled={true}
                                      aria-label={null}
                                      className="pf-c-button pf-m-primary pf-m-disabled pf-c-button pf-m-primary pf-m-block"
                                      data-ouia-component-id="OUIA-Generated-Button-primary-2"
                                      data-ouia-component-type="PF4/Button"
                                      data-ouia-safe={true}
                                      disabled={true}
                                      role={null}
                                      tabIndex={null}
                                      type="submit"
                                    >
                                       Sign in
                                    </button>
                                  </ButtonBase>
                                </Button>
                              </div>
                            </div>
                          </div>
                        </ActionGroup>
                      </form>
                    </FormBase>
                  </Form>
                </Login3scaleForm>
                <div
                  className="providers-separator"
                >
                  <AuthenticationProviders
                    authenticationProviders={[]}
                  >
                    <div
                      className="providers-list"
                    />
                  </AuthenticationProviders>
                </div>
              </div>
            </LoginMainBody>
            <LoginMainFooter
              forgotCredentials={
                <ForgotCredentials
                  requestPasswordResetPath="password-path"
                />
              }
              signUpForAccountMessage={null}
              socialMediaLoginContent={null}
            >
              <div
                className="pf-c-login__main-footer"
              >
                <div
                  className="pf-c-login__main-footer-band"
                >
                  <ForgotCredentials
                    requestPasswordResetPath="password-path"
                  >
                    <LoginMainFooterBandItem>
                      <p
                        className="pf-c-login__main-footer-band-item"
                      >
                        <a
                          href="password-path"
                        >
                          Forgot password?
                        </a>
                      </p>
                    </LoginMainFooterBandItem>
                  </ForgotCredentials>
                </div>
              </div>
            </LoginMainFooter>
          </main>
          <LoginFooter>
            <footer
              className="pf-c-login__footer"
            >
              <p />
              <List>
                <ul
                  className="pf-c-list"
                />
              </List>
            </footer>
          </LoginFooter>
        </div>
      </div>
    </Login>
  </LoginPage>
</SimpleLoginPage>
`;
